<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:background="@drawable/dialog_background"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:gravity="center"
        android:text="@string/cx62_bt_dialog_del_title"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/tv_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:gravity="center"
        android:text="@string/cx62_bt_dialog_del_message"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btn_dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:background="@drawable/dialog_button_background"
            android:text="@string/cx62_bt_dialog_yes"
            android:textSize="26sp"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="62dp"
            android:background="@drawable/dialog_button_rad_background"
            android:text="@string/cx62_bt_dialog_no"
            android:textColor="@color/colorWhite"
            android:textSize="26sp"/>
    </RelativeLayout>

</LinearLayout>