<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/rl_dialog_Layout"
              android:layout_width="500dp"
              android:layout_height="260dp"
              android:layout_gravity="center"
              android:background="@drawable/dialog_background"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:gravity="center"
        android:text="@string/cx62_bt_dialog_sync_ok"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/btn_dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:background="@drawable/dialog_button_background"
            android:text="@string/cx62_bt_dialog_yes"
            android:textColor="@color/colorWhite"
            android:textSize="26sp"/>

        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="62dp"
            android:background="@drawable/dialog_button_rad_background"
            android:text="@string/cx62_bt_dialog_no"
            android:textColor="@color/colorWhite"
            android:textSize="26sp"/>
    </RelativeLayout>


</LinearLayout>