<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="82dp">

        <com.semisky.bluetoothproject.view.AppTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="100dp"
            android:text="@string/bt_app_name"
            android:textSize="30sp"
            />

        <Switch
            android:id="@+id/BtOpenSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="100dp"
            android:textOff=""
            android:textOn=""
            android:thumb="@android:color/transparent"
            android:track="@drawable/btn_set_switch_selector"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/icon_call_item_line"/>

    </RelativeLayout>

    <include layout="@layout/device_refresh_view"/>

    <ListView
        android:id="@+id/lsDeviceList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/rlNoneDevices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvSearchMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/cx62_bt_refresh_no_device"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSearchMessage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/cx62_bt_refresh_please_refresh"
            android:textSize="30sp"/>
    </RelativeLayout>

</LinearLayout>