<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="82dp">

            <com.semisky.bluetoothproject.view.AppTextView
                android:id="@+id/tvDeviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="100dp"
                android:text="@string/bt_devices_name"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/tvSetDeviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="100dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textSize="30sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="100dp"
                android:background="@drawable/icon_call_item_line"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:visibility="gone">

            <com.semisky.bluetoothproject.view.AppTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="100dp"
                android:text="@string/bt_devices_module_version"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/tvSetModuleVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="100dp"
                android:text="V1.0"
                android:textSize="30sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="100dp"
                android:background="@drawable/icon_call_item_line"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlBreakConnectItem"
            android:layout_width="match_parent"
            android:layout_height="82dp">

            <com.semisky.bluetoothproject.view.AppTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="100dp"
                android:text="@string/cx62_bt_settings_bt_connect"
                android:textSize="30sp"/>

            <com.semisky.bluetoothproject.view.AppTextView
                android:id="@+id/tvSetBtBreakConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="100dp"
                android:background="@drawable/set_btn_bg_selector"
                android:gravity="center"
                android:text="@string/bt_break"
                android:textSize="30sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="100dp"
                android:background="@drawable/icon_call_item_line"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlSyncContentItem"
            android:layout_width="match_parent"
            android:layout_height="82dp">

            <com.semisky.bluetoothproject.view.AppTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="100dp"
                android:text="@string/cx62_bt_settings_sync_ab"
                android:textSize="30sp"/>

            <com.semisky.bluetoothproject.view.AppTextView
                android:id="@+id/tvSetBtSync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="100dp"
                android:background="@drawable/set_btn_bg_selector"
                android:gravity="center"
                android:text="@string/cx62_bt_settings_sync"
                android:textSize="30sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="100dp"
                android:background="@drawable/icon_call_item_line"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="82dp">

            <com.semisky.bluetoothproject.view.AppTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="100dp"
                android:text="@string/cx62_bt_settings_auto_sync_ab"
                android:textSize="30sp"/>

            <Switch
                android:id="@+id/tvSetContactSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="100dp"
                android:textOff=""
                android:textOn=""
                android:thumb="@android:color/transparent"
                android:track="@drawable/btn_set_switch_selector"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="100dp"
                android:background="@drawable/icon_call_item_line"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="82dp">

            <com.semisky.bluetoothproject.view.AppTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="100dp"
                android:text="@string/cx62_bt_settings_auto_connect"
                android:textSize="30sp"/>

            <Switch
                android:id="@+id/tvSetConnectSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="100dp"
                android:textOff=""
                android:textOn=""
                android:thumb="@android:color/transparent"
                android:track="@drawable/btn_set_switch_selector"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="100dp"
                android:background="@drawable/icon_call_item_line"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="82dp">

            <com.semisky.bluetoothproject.view.AppTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="100dp"
                android:text="@string/cx62_bt_settings_auto_answer"
                android:textSize="30sp"/>

            <Switch
                android:id="@+id/tvSetAnswerSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="100dp"
                android:textOff=""
                android:textOn=""
                android:thumb="@android:color/transparent"
                android:track="@drawable/btn_set_switch_selector"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="100dp"
                android:background="@drawable/icon_call_item_line"/>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>